[package]
name = "lutario"
version = "0.1.0"
authors = ["Fei Yuan <yuan@nscl.msu.edu>"]

[dependencies]
any_key = "0.1.1"
byteorder = "1.1.0"
cblas = "0.1.5"
conv = "0.3.3"
debugit = "0.1.2"
flate2 = "1.0.1"
fnv = "1.0.5"
lapacke = "0.1.4"
lazy_static = "1.0.0"
netlib-src = { version = "0.7.3", default-features = false, features = ["cblas", "lapacke", "system"] }
num = "0.1.40"
regex = "0.2.2"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_yaml = "0.7.3"
siphasher = "0.2.2"
stable_deref_trait = "1.0.0"
take_mut = "0.2.0"
xz2 = "0.1.3"
wigner-symbols = "0.2.0"

[profile.release]
debug = true
