[package]
name = "lutario"
version = "0.1.0"
authors = ["Fei Yuan <yuan@nscl.msu.edu>"]

[dependencies]
any_key = "0.1.1"
bincode = "0.9.2"
byteorder = "1.1.0"
cblas = "0.1.5"
clap = "2.29.0"
conv = "0.3.3"
flate2 = "1.0.1"
fnv = "1.0.5"
lapacke = "0.1.4"
lazy_static = "1.0.0"
libc = "0.2.29"
netlib-src = { version = "0.7.3", default-features = false, features = ["cblas", "lapacke", "system"] }
num = "0.1.40"
quick-error = "1.2.1"
rand = "0.4.1"
regex = "0.2.2"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_yaml = "0.7.3"
siphasher = "0.2.2"
stable_deref_trait = "1.0.0"
take_mut = "0.2.0"
wigner-symbols = "0.3.0"
xz2 = "0.1.3"

[profile.release]
debug = true
