[package]
name = "lutario"
version = "0.1.0"
authors = ["Fei Yuan <yuan@nscl.msu.edu>"]

[dependencies]
any_key = "0.1.1"
bincode = "1.3.1"
byteorder = "1.1.0"
cblas = "0.2.0"
clap = "2.29.0"
conv = "0.3.3"
flate2 = "1.0.1"
fnv = "1.0.5"
lapacke = "0.2.0"
lazy_static = "1.0.0"
libc = "0.2.29"
netlib-src = { version = "0.8.0", default-features = false, features = ["cblas", "lapacke", "system"] }
num = "0.2.1"
quick-error = "2.0.0"
rand = "0.8.0"
rand_distr = "0.4.0"
rand_xorshift = "0.3.0"
regex = "1.4.2"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_yaml = "0.8.14"
siphasher = "0.3.3"
stable_deref_trait = "1.0.0"
take_mut = "0.2.0"
wigner-symbols = "0.4.0"
xz2 = "0.1.3"

[profile.release]
debug = true
